-- CampusBridge baseline schema (S0-1).
--
-- Single source of truth for the database. Replaces three competing sources:
-- h2-schema.sql, db/init/*.sql, and Hibernate's ddl-auto=update. The JPA half of
-- this file was generated from the entity classes (ddl-auto=create against
-- Postgres 16, then pg_dump), so `ddl-auto: validate` passes against it. Change an
-- @Entity and you must add a migration here, or the app refuses to start — which
-- is the point.
--
-- Ordering: parents before children, so the foreign keys below resolve.

-- ---------------------------------------------------------------------------
-- Directory (plain JDBC, not JPA — Hibernate never sees these three)
-- ---------------------------------------------------------------------------

CREATE TABLE university (
    id   bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(255) NOT NULL UNIQUE
);

-- Column widths are deliberately generous. The previous H2 schema used
-- varchar(20) for names and varchar(40) for the city, which turned an ordinary
-- long surname into a 500 rather than a validation message.
CREATE TABLE student (
    id                bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name        varchar(100) NOT NULL,
    last_name         varchar(100) NOT NULL,
    resident_city     varchar(100) NOT NULL,
    resident_state    varchar(2)   NOT NULL,
    university_id     bigint       NOT NULL REFERENCES university (id),
    grade             varchar(20)  NOT NULL,
    major             varchar(255) NOT NULL,
    -- One directory row per person: StudentRepository.findByEmail uses
    -- queryForObject, which throws on a second match.
    email             varchar(255) NOT NULL UNIQUE,
    social_media_link varchar(255)
);

CREATE INDEX idx_student_university ON student (university_id);

CREATE TABLE app_user (
    id       bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role     varchar(20)  NOT NULL,
    email    varchar(255) NOT NULL UNIQUE,
    -- Nullable since Clerk became the identity provider. Nothing reads it.
    password varchar(255)
);

-- ---------------------------------------------------------------------------
-- Marketplace
-- ---------------------------------------------------------------------------

CREATE TABLE listing (
    id           bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_email varchar(255) NOT NULL,
    title        varchar(255) NOT NULL,
    description  varchar(4000),
    category     varchar(255) NOT NULL,
    listing_type varchar(255) NOT NULL,
    status       varchar(255) NOT NULL,
    price        numeric(38, 2),
    course_code  varchar(255),
    school_id    bigint REFERENCES university (id) ON DELETE SET NULL,
    created_at   timestamp(6) with time zone NOT NULL,
    updated_at   timestamp(6) with time zone NOT NULL,
    CONSTRAINT listing_category_check CHECK (category IN
        ('BOOKS', 'CLOTHES', 'EVENT_TICKETS', 'FURNITURE', 'ELECTRONICS', 'OTHER')),
    CONSTRAINT listing_listing_type_check CHECK (listing_type IN
        ('SELL', 'RENT', 'FREE', 'LOOKING_FOR')),
    CONSTRAINT listing_status_check CHECK (status IN ('AVAILABLE', 'PENDING', 'SOLD'))
);

CREATE INDEX idx_listing_seller ON listing (seller_email);
CREATE INDEX idx_listing_school ON listing (school_id);
CREATE INDEX idx_listing_status_category ON listing (status, category);
CREATE INDEX idx_listing_course_code ON listing (course_code);

CREATE TABLE listing_photo (
    listing_id bigint NOT NULL REFERENCES listing (id) ON DELETE CASCADE,
    photo_url  varchar(255)
);

CREATE INDEX idx_listing_photo_listing ON listing_photo (listing_id);

CREATE TABLE listing_favorite (
    id         bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    listing_id bigint       NOT NULL REFERENCES listing (id) ON DELETE CASCADE,
    user_email varchar(255) NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    CONSTRAINT uk_listing_favorite UNIQUE (listing_id, user_email)
);

CREATE INDEX idx_listing_favorite_user ON listing_favorite (user_email);

CREATE TABLE listing_report (
    id             bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    listing_id     bigint        NOT NULL REFERENCES listing (id) ON DELETE CASCADE,
    reporter_email varchar(255)  NOT NULL,
    reason         varchar(1000) NOT NULL,
    created_at     timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_listing_report_listing ON listing_report (listing_id);

-- ---------------------------------------------------------------------------
-- Messages
-- ---------------------------------------------------------------------------

CREATE TABLE conversation (
    id         bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type       varchar(255) NOT NULL,
    -- A conversation outlives the listing it started from.
    listing_id bigint REFERENCES listing (id) ON DELETE SET NULL,
    created_at timestamp(6) with time zone NOT NULL,
    CONSTRAINT conversation_type_check CHECK (type IN ('MARKETPLACE', 'DIRECT'))
);

CREATE INDEX idx_conversation_listing ON conversation (listing_id);

CREATE TABLE conversation_participant (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    conversation_id bigint       NOT NULL REFERENCES conversation (id) ON DELETE CASCADE,
    user_email      varchar(255) NOT NULL,
    unread_count    integer      NOT NULL,
    last_read_at    timestamp(6) with time zone,
    CONSTRAINT uk_conversation_participant UNIQUE (conversation_id, user_email)
);

CREATE INDEX idx_conversation_participant_user ON conversation_participant (user_email);

CREATE TABLE message (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    conversation_id bigint        NOT NULL REFERENCES conversation (id) ON DELETE CASCADE,
    sender_email    varchar(255)  NOT NULL,
    content         varchar(4000) NOT NULL,
    image_url       varchar(255),
    created_at      timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_message_conversation ON message (conversation_id, created_at);

CREATE TABLE blocked_user (
    id            bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    blocker_email varchar(255) NOT NULL,
    blocked_email varchar(255) NOT NULL,
    created_at    timestamp(6) with time zone NOT NULL,
    CONSTRAINT uk_blocked_user UNIQUE (blocker_email, blocked_email)
);

CREATE TABLE user_report (
    id             bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reporter_email varchar(255)  NOT NULL,
    reported_email varchar(255)  NOT NULL,
    reason         varchar(1000) NOT NULL,
    created_at     timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_user_report_reported ON user_report (reported_email);

-- ---------------------------------------------------------------------------
-- Community
-- ---------------------------------------------------------------------------

-- "group" is reserved in SQL, so the Group entity maps to app_group.
CREATE TABLE app_group (
    id               bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name             varchar(255) NOT NULL,
    description      varchar(2000),
    type             varchar(255) NOT NULL,
    related_value    varchar(255),
    school_id        bigint REFERENCES university (id) ON DELETE SET NULL,
    created_by_email varchar(255) NOT NULL,
    created_at       timestamp(6) with time zone NOT NULL,
    CONSTRAINT app_group_type_check CHECK (type IN
        ('MAJOR', 'GRADUATION_YEAR', 'COURSE_STUDY', 'GENERAL'))
);

CREATE INDEX idx_app_group_school ON app_group (school_id);

CREATE TABLE group_membership (
    id         bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    group_id   bigint       NOT NULL REFERENCES app_group (id) ON DELETE CASCADE,
    user_email varchar(255) NOT NULL,
    joined_at  timestamp(6) with time zone NOT NULL,
    CONSTRAINT uk_group_membership UNIQUE (group_id, user_email)
);

CREATE INDEX idx_group_membership_user ON group_membership (user_email);

CREATE TABLE post (
    id           bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    author_email varchar(255)  NOT NULL,
    content      varchar(4000) NOT NULL,
    image_url    varchar(255),
    -- Null for the global feed; set for a post inside a group.
    group_id     bigint REFERENCES app_group (id) ON DELETE CASCADE,
    pinned       boolean       NOT NULL,
    created_at   timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_post_group ON post (group_id);
CREATE INDEX idx_post_created ON post (created_at DESC);

CREATE TABLE post_comment (
    id           bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    post_id      bigint        NOT NULL REFERENCES post (id) ON DELETE CASCADE,
    author_email varchar(255)  NOT NULL,
    content      varchar(2000) NOT NULL,
    created_at   timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_post_comment_post ON post_comment (post_id);

CREATE TABLE post_like (
    id         bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    post_id    bigint       NOT NULL REFERENCES post (id) ON DELETE CASCADE,
    user_email varchar(255) NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    CONSTRAINT uk_post_like UNIQUE (post_id, user_email)
);

CREATE TABLE event (
    id               bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title            varchar(255) NOT NULL,
    description      varchar(2000),
    location         varchar(255),
    starts_at        timestamp(6) with time zone NOT NULL,
    school_id        bigint REFERENCES university (id) ON DELETE SET NULL,
    listing_id       bigint REFERENCES listing (id) ON DELETE SET NULL,
    created_by_email varchar(255) NOT NULL,
    created_at       timestamp(6) with time zone NOT NULL
);

CREATE INDEX idx_event_starts_at ON event (starts_at);
CREATE INDEX idx_event_school ON event (school_id);

-- ---------------------------------------------------------------------------
-- Support
-- ---------------------------------------------------------------------------

CREATE TABLE support_resource (
    id           bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    school_id    bigint       NOT NULL REFERENCES university (id) ON DELETE CASCADE,
    name         varchar(255) NOT NULL,
    category     varchar(255) NOT NULL,
    description  varchar(2000),
    address      varchar(255),
    contact_info varchar(255),
    latitude     double precision,
    longitude    double precision,
    CONSTRAINT support_resource_category_check CHECK (category IN
        ('FOOD_PANTRY', 'EMERGENCY_AID', 'COUNSELING', 'OTHER'))
);

CREATE INDEX idx_support_resource_school ON support_resource (school_id);

CREATE TABLE anonymous_request (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    requester_email varchar(255)  NOT NULL,
    category        varchar(255)  NOT NULL,
    description     varchar(2000) NOT NULL,
    status          varchar(255)  NOT NULL,
    school_id       bigint REFERENCES university (id) ON DELETE SET NULL,
    created_at      timestamp(6) with time zone NOT NULL,
    CONSTRAINT anonymous_request_category_check CHECK (category IN
        ('FOOD_PANTRY', 'EMERGENCY_AID', 'COUNSELING', 'OTHER')),
    CONSTRAINT anonymous_request_status_check CHECK (status IN ('OPEN', 'FULFILLED', 'CLOSED'))
);

CREATE INDEX idx_anonymous_request_school ON anonymous_request (school_id);
